--- a/Scandinavie2019.html
+++ b/Scandinavie2019.html
@@ -4,7 +4,7 @@
 <title>Scandinavie 2019</title>
 </head>
 <body>
-<title>SCANDINAVIE 2019</title>
+<h1>SCANDINAVIE 2019</h2>
 <br>
 </body>
 </html>
